# boorie.org

./: .env.example  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTENT_GUIDELINES.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
Docs/: README.md  documento_c3_completo_fusionado.md
Docs/api/: README.md
Docs/technical/: README.md
Docs/tutorials/: README.md
community-site/: README.md
rag-knowledge/: CLAUDE.md  CONTENT_TASKS.md  README.md
rag-knowledge/best-practices/: README.md
rag-knowledge/hydraulics/: README.md
rag-knowledge/regulations/: README.md
