[tool.poetry]
name = "boorie"
version = "0.1.0"
description = "AI-powered hydraulic engineering agent integrating WNTR with LLMs"
authors = ["Boorie Team <team@boorie.org>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://boorie.org"
repository = "https://github.com/boorie/boorie"
documentation = "https://docs.boorie.org"
keywords = ["hydraulics", "water networks", "WNTR", "AI", "engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Hydrology",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
wntr = ">=0.5.0"
litellm = ">=1.0.0"
fastapi = ">=0.100.0"
uvicorn = {extras = ["standard"], version = ">=0.23.0"}
pydantic = ">=2.0.0"
numpy = ">=1.21.0"
pandas = ">=1.3.0"
matplotlib = ">=3.4.0"
networkx = ">=2.6.0"
sqlalchemy = ">=2.0.0"
alembic = ">=1.8.0"
asyncpg = ">=0.27.0"
redis = ">=4.5.0"
celery = ">=5.2.0"
httpx = ">=0.24.0"
python-multipart = ">=0.0.6"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
email-validator = ">=2.0.0"
jinja2 = ">=3.1.0"
python-dotenv = ">=1.0.0"
click = ">=8.1.0"
rich = ">=13.0.0"
typer = ">=0.9.0"
structlog = ">=23.0.0"
sentry-sdk = ">=1.30.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.10.0"
black = ">=23.0.0"
flake8 = ">=6.0.0"
isort = ">=5.12.0"
mypy = ">=1.0.0"
pre-commit = ">=3.0.0"
ipython = ">=8.10.0"
jupyter = ">=1.0.0"
notebook = ">=6.5.0"
sphinx = ">=6.0.0"
sphinx-rtd-theme = ">=1.2.0"
myst-parser = ">=1.0.0"
autodoc-pydantic = ">=2.0.0"

[tool.poetry.scripts]
boorie = "boorie.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_third_party = ["fastapi", "pydantic", "sqlalchemy", "celery"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=boorie --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["boorie"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false